web-client/src/styles/custom.scss
/* ... */
.red-warning-header {
  padding: 5px 0;
  margin-bottom: 0;
  background-color: color($theme-color-secondary-dark);
  color: white;
}

.big-blue-header {
  padding: 20px 0;
  margin-bottom: 20px;
  background-color: color($theme-color-primary-darker);
  color: $color-white;

  h1 {
    display: inline-block;
    margin: 0 15px 0 0;
    color: $color-white;
  }

  a,
  button {
    color: $color-white;
  }

  a:not(.usa-button):hover,
  button:hover {
    color: $color-primary-alt;
  }

  .usa-button--outline {
    background-color: $color-white;
    color: color($theme-color-primary);

    &:hover {
      color: color($theme-color-primary-dark);
    }
  }

  .usa-tag {
    background: $color-white;
    color: color($theme-color-primary-darker);
    font-weight: $font-bold;
    white-space: nowrap;

    &.ustc-tag--yellow {
      background: color($theme-color-warning);
    }
  }

  .unread {
    position: relative;
    top: -3px;
    background: $color-white;
    color: color($theme-color-primary-darker);
  }

  .space-between {
    justify-content: space-between;
  }

  #case-title {
    max-width: none;

    span {
      margin-right: 15px;
    }
  }
}

.title {
  border-bottom: 1px solid color($theme-color-base-lighter);
  margin-bottom: 20px;

  h1 {
    position: relative;
    top: 2px;
    display: inline-block;
    padding-bottom: 10px;
    border-bottom: 3px solid color($theme-color-primary);
    margin-top: -2px;
    margin-bottom: 0;
  }
}

hr.lighter {
  border-top: 1px solid color($theme-color-base-lighter);
}

.case-detail-primary-tabs__container {
  background-color: color($theme-color-primary);
}

.case-detail-primary-tabs__tabs {
  max-width: 1440px;
  padding-right: 2rem;
  padding-left: 2rem;
  margin: 0 auto;

  @media only screen and (max-width: $medium-screen) {
    nav {
      display: none;
    }
  }
}

.document-detail__action-buttons {
  .float-left {
    position: absolute;
    bottom: 14px;
  }

  .float-right {
    margin-top: 8px;
  }
}

.DocumentDetail {
  .heading-1 {
    margin-bottom: 15px;
  }

  .subsection {
    &.party-type,
    &.contacts {
      margin-bottom: 20px;
    }

    &.contacts:empty {
      display: none;
    }
  }
}

/* stylelint-disable selector-id-pattern */
#tab-document-info-panel,
#tabContent-caseInfo {
  .label + p {
    margin-top: 5px;
    margin-bottom: 20px;
  }
}
/* stylelint-enable selector-id-pattern */

.document-viewer-top-margin {
  margin-top: 57px;
}

#ustc-start-a-case-form {
  .blue-container .usa-form-group:last-child,
  .blue-container .usa-fieldset:last-child {
    margin-bottom: 0;
  }
}

#document-advanced {
  .grid-container .usa-form-group:last-child,
  .grid-container .usa-fieldset:last-child {
    margin-bottom: 5px;
  }
}

.document-type-read-only {
  .nonstandard-form {
    .usa-form-group:last-of-type {
      margin-bottom: 0;
    }
  }
}

.tab-right-button {
  position: absolute;
  right: -7px;
}

.quill {
  background: $color-white;
}

.sign-pdf-control {
  .icon-button {
    color: color($theme-color-primary);
    cursor: pointer;

    &.disabled {
      color: color($theme-color-base-light);
      cursor: arrow;
    }
  }

  .pages {
    position: relative;
    top: -6px;
    font-size: 18px;
    font-weight: $font-semibold;
  }
}

.cursor-grab {
  cursor: grab;
}

.cursor-grabbing {
  cursor: grabbing;
}

.sign-pdf-interface {
  position: relative;
  padding: 30px 0;
  background-color: color($theme-color-base);

  #signature {
    position: absolute;
    padding: 10px;
    border: 1px solid #eee;
    background-color: rgb(255 255 255 / 80%);
    font-family: 'Times New Roman', Times, serif;
    font-weight: $font-bold;
    text-align: center;
  }

  #signature-warning {
    position: relative;
    display: block;
    width: 612px;
    padding: 20px;
    margin: auto;
    margin-top: -60px;
    background-color: transparent;
    color: transparent;

    &:hover {
      background-color: $color-error;
      color: black;
    }

    font-weight: $font-bold;
    overflow-y: overlay;
    text-align: center;
  }

  #stamp {
    position: absolute;
    width: 60%;
    max-width: 60%;
    padding: 10px;
    border: 1px solid black;
    background-color: rgb(255 255 255 / 80%);
    font-weight: $font-bold;
    text-align: center;

    #stamp-text {
      font-family: 'Source Sans Pro', $font-source-sans;
    }

    #stamp-signature {
      font-family: 'Times New Roman', Times, serif;
    }
  }

  #sign-pdf-canvas {
    display: block;
    margin: auto;
    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
  }
}

.ql-editor {
  min-height: 640px;
  max-height: 640px;
  font-family: 'Times New Roman', Times, serif;
  font-size: 16px;

  p {
    max-width: 100%;
  }
}

.ql-snow .ql-picker.ql-size .ql-picker-item[data-value='10px']::before,
.ql-snow .ql-picker.ql-size .ql-picker-label.ql-active[data-value='10px']::before {
  content: '10px';
  font-size: 10px !important;
}

.ql-snow .ql-picker.ql-size .ql-picker-item[data-value='12px']::before,
.ql-snow .ql-picker.ql-size .ql-picker-label.ql-active[data-value='12px']::before {
  content: '12px';
  font-size: 12px !important;
}

/* default */
.ql-snow .ql-picker.ql-size .ql-picker-item[data-value='14px']::before,
.ql-snow .ql-picker.ql-size .ql-picker-label.ql-active[data-value='14px']::before {
  content: '14px';
  font-size: 14px !important;
}

.ql-snow .ql-picker.ql-size .ql-picker-item[data-value='16px']::before,
.ql-snow .ql-picker.ql-size .ql-picker-label.ql-active[data-value='16px']::before,
.ql-snow .ql-picker.ql-size .ql-picker-label:not(.ql-active)::before {
  content: '16px';
  font-size: 16px !important;
}

.ql-snow .ql-picker.ql-size .ql-picker-item[data-value='18px']::before,
.ql-snow .ql-picker.ql-size .ql-picker-label.ql-active[data-value='18px']::before {
  content: '18px';
  font-size: 18px !important;
}
/* ... */

